GeneWeb version 3.06
--------------------

* Languages
  - [20 Jun 00] Added Latvian (Janeks Kamerovskis).

* Setup program (gwsetup)
  - [20 Jun 00] Added Latvian version (Janeks Kamerovskis).

* GeneWeb Service/CGI (gwd)
  - [21 Jun 00] Added displaying of oldest perhaps still alive (from welcome
    page).
  - [20 Jun 00] Changed displaying of marriage witnesses in personal pages.
  - [20 Jun 00] Together with the link to the welcome page (up arrow), added
    a link to the referer page (left arrow).
  - [19 Jun 00] Changed page design of relationship computing.
  - [19 Jun 00] In latest marriages, display now only true marriages (i.e.
    not "relations" nor "engagements").
  - [18 Jun 00] Added a link in bottom of welcome pages, useful if you
    have got a browser which does not automatically update the modified
    pages (forcing you to do "reload current document"). When clicking on
    it, you browse without this problem: no more need to reload the pages,
    they are displayed with their changes if there are some.
  - [18 Jun 00] Fixed little problem: the (new) fast merges of persons did not
    appear in the history.
  - [17 Jun 00] In update family forms, added a button close to the "family
    source": when selected, the "family source" text is automatically put 
    (as default value) in "family source" fields in future other family
    updates. It avoids to have to copy it each time when it is always the
    same one.
  - [16 Jun 00] Added feature: in relationship computing, when option
    "shortest path" is selected, it is displayed together with a link
    to see the next shortest path.
  - [13 Jun 00] Deleted this stupid "<meta http-equiv...>" in welcome pages
    and in other pages, because it makes some browsers generate two requests
    and we see the page blinking. Moreover, it has no sense (even if it is
    standard), since the HTTP header already contains that.

* Base configuration files (base.gwf)